Video alignment improvement and other fixes

--- a/GalleYann/src/app/host/host.component.css
+++ b/GalleYann/src/app/host/host.component.css
@@ -1,8 +1,8 @@
-.footer {
+.toolbar {
   position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 10%;
+  top: 0;
+  right: 0;
+  height: 7%;
   display: flex;
   align-items: center;
   background-color: rgba(252, 186, 0, 1);;
@@ -31,7 +31,7 @@
 
 .videoGrid {
   display: grid;
-  margin: 1% 1% 11% 1%;
+  margin: 1% 1% 1% 1%;
 }
 
 .videoElement {
